--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Caveat&family=Raleway:wght@200;300&family=Work+Sans:ital,wght@0,100;0,200;1,100&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Caveat&family=Raleway:wght@200;300&family=Work+Sans:ital,wght@0,100;0,200;0,300;1,100;1,200;1,400&display=swap"
       rel="stylesheet"
     />
 
